fixing stories to be appeling on mobile view add new scroll animation

--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,9 @@ ul {
   height: 1px;
   background-color: #3a3b3c; }
 
+.margin-left {
+  margin-left: 4rem; }
+
 .aside {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
@@ -360,7 +363,7 @@ ul {
   overflow: auto;
   display: flex;
   flex-direction: column;
-  padding-bottom: 1rem;
+  padding-bottom: 2rem;
   position: relative;
   scroll-behavior: smooth; }
   @media (max-width: 62.5em) {
@@ -372,6 +375,13 @@ ul {
   @media (max-width: 31.25em) {
     .aside {
       grid-column: 1 / -1; } }
+  .aside::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 5px; }
+  .aside::-webkit-scrollbar-thumb {
+    background-color: #686868;
+    border-top-right-radius: 5px;
+    border-radius: 5px; }
   .aside__navigation {
     display: flex;
     flex-direction: column;
@@ -1821,12 +1831,19 @@ ul {
       overflow-y: hidden;
       gap: 0.5rem;
       scrollbar-width: none; }
+      @media (max-width: 31.25em) {
+        .feed__reels--img {
+          display: flex;
+          overflow-x: scroll;
+          scroll-snap-type: x mandatory;
+          scroll-padding-left: 10rem;
+          gap: 1rem; } }
       .feed__reels--img::-webkit-scrollbar {
         display: none; }
       .feed__reels--img .btn {
         height: 4rem;
         width: 4rem;
-        background-color: green;
+        background-color: #3e4042;
         border-radius: 50%;
         position: sticky;
         top: 44%;
@@ -1835,10 +1852,15 @@ ul {
         display: flex;
         align-items: center;
         justify-content: center; }
+        @media (max-width: 31.25em) {
+          .feed__reels--img .btn {
+            display: none; } }
+        .feed__reels--img .btn span {
+          color: #b0b3b8; }
       .feed__reels--img .previous {
         height: 4rem;
         width: 4rem;
-        background-color: green;
+        background-color: #3e4042;
         border-radius: 50%;
         position: sticky;
         top: 44%;
@@ -1847,14 +1869,21 @@ ul {
         display: flex;
         align-items: center;
         justify-content: center; }
+        @media (max-width: 31.25em) {
+          .feed__reels--img .previous {
+            display: none; } }
       .feed__reels--img .featured {
         position: relative;
         height: 39rem;
         width: 28.2rem;
-        background-color: #ccc;
         left: -4rem;
         border-radius: 10px;
         transition: transform 500ms; }
+        @media (max-width: 31.25em) {
+          .feed__reels--img .featured {
+            flex: 0 0 60%;
+            scroll-snap-align: start;
+            cursor: pointer; } }
         .feed__reels--img .featured img {
           height: 100%;
           width: 100%;
