--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -547,3 +547,7 @@ ul {
   height: 1px;
   background-color: $search-hover;
 }
+
+.margin-left {
+  margin-left: 4rem;
+}
